--- a/src/scss/theme/_notices.scss
+++ b/src/scss/theme/_notices.scss
@@ -1,14 +1,3 @@
-// .notice-container {
-//   margin: 0px 0px !important;
-//   padding: 0px 25px;
-
-//   @media (max-width: 768px) {
-//     max-height: 80vh;
-//     overflow-y: auto;
-//   }
-
-// }
-
 .notice-container {
     margin: 0;
     padding: 1.5rem;        
@@ -19,6 +8,11 @@
       overflow-y: auto;
       background: transparent !important;
       border: none !important;
+      scrollbar-width: none;
+      -ms-overflow-style: none;
+      &::-webkit-scrollbar {
+        display: none;
+      }
     }
 
     & img {
